--- a/apps/background/package.json
+++ b/apps/background/package.json
@@ -11,9 +11,16 @@
     "build": "tsc && vite build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "dependencies": {
+    "@repo/config": "*",
+    "@repo/database": "*",
+    "@repo/i18n": "*",
+    "uuid": "^9.0.1"
+  },
   "devDependencies": {
     "@types/chrome": "^0.0.258",
     "@types/node": "^20.11.0",
+    "@types/uuid": "^10.0.0",
     "typescript": "^5.3.3",
     "vite": "^5.4.21"
   }
