--- a/apps/background/tsconfig.json
+++ b/apps/background/tsconfig.json
@@ -12,6 +12,15 @@
         "paths": {
             "@/*": [
                 "../../*"
+            ],
+            "@repo/config": [
+                "../../packages/config"
+            ],
+            "@repo/database": [
+                "../../packages/database"
+            ],
+            "@repo/i18n": [
+                "../../packages/i18n"
             ]
         }
     },
