--- a/apps/popup/package.json
+++ b/apps/popup/package.json
@@ -12,7 +12,7 @@
         "@mantine/core": "^8.3.15",
         "@mantine/hooks": "^8.3.15",
         "@tabler/icons-react": "^3.36.1",
-        "i18n": "*",
+        "@repo/i18n": "*",
         "postcss": "^8.5.6",
         "postcss-preset-mantine": "^1.18.0",
         "postcss-simple-vars": "^7.0.1",
